--- a/p/po/poo/poolexpert.com.html
+++ b/p/po/poo/poolexpert.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the poolexpert.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216011055id_/http%3A//www1.poolexpert.com/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the poolexpert.com privacy policy that was archived on 2009-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090615004604id_/http%3A//www.poolexpert.com/privacy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 <meta http-equiv="Content-type" content="text/html; charset=iso-8859-1">
@@ -8,7 +8,7 @@
 <meta name="description" content="Online NHL hockey pool manager and MLB Fantasy baseball commissioner for individuals or office pools. Easy to use and free trial! Daily updates from 3am. Only $2 per team (max $30).">
 <meta http-equiv="Content-language" content="en">
 
-<meta name="Keywords" content="nhl,hockey,baseball,pool,free,hockey pool,stats,sports,fantasy,pools,2008,online,nhl 2008,mlb,scores,news,fantasy hockey,fantasy baseball,formula,2007,schedule,zepto">
+<meta name="Keywords" content="nhl,hockey,baseball,pool,free,hockey pool,stats,sports,fantasy,pools,2009,online,nhl 2009,mlb,scores,news,fantasy hockey,fantasy baseball,formula,2008,schedule,zepto">
 <meta name="author" content="Patrice Boissonneault, Zepto Internet Solutions Inc.">
 <script language="javascript" src="jvs/flash.js" type="text/javascript"></script>
 <script language="javascript" src="jvs/menu.js" type="text/javascript"></script>
@@ -219,8 +219,8 @@
 		
 		<td align="left" width="49%" nowrap=""><span class="foot">PoolExpert ® is a registered trade mark of PoolExpert Inc.</span><br><a href="privacy.asp" class="foot">Privacy Policy</a><span class="foot"> | </span><a href="terms.asp" class="foot">Terms and conditions</a></td>
 <!--		<td valign=top align=center><span class=foot>Hébergé et opéré par </span><a href="http://www.zepto.ca" class=foot>Solutions Internet Zepto Inc.</a></td> -->
-		<td valign="top" align="center" nowrap=""><span class="foot">Servers operated by <a href="http://www.zepto.ca/default.aspx?lang=en" target="_blank" class="foot">Zepto</a> (sid:1)</span></td>
-		<td align="right" width="49%" nowrap=""><span class="foot">Copyright © 1999-2008 PoolExpert Inc.<br>Portions copyright © 2008 <a href="http://biz.stats.com" target="_blank" class="foot">STATS LLC</a></span></td>
+		<td valign="top" align="center" nowrap=""><span class="foot">Servers operated by <a href="http://www.zepto.ca/default.aspx?lang=en" target="_blank" class="foot">Zepto</a> (sid:3)</span></td>
+		<td align="right" width="49%" nowrap=""><span class="foot">Copyright © 1999-2009 PoolExpert Inc.<br>Portions copyright © 2009 <a href="http://biz.stats.com" target="_blank" class="foot">STATS LLC</a></span></td>
 		
 		</tr></tbody></table>
 	</td>
@@ -234,12 +234,25 @@
 
 
 
-<!-- --- POOLEXPERT GOOGLE EMBEDD CODE ---->
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
-<script type="text/javascript">
-_uacct = "UA-428560-2";
-urchinTracker();
+	<!-- --- POOLEXPERT GOOGLE EMBEDD CODE ---->
+	<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+	</script>
+	<script type="text/javascript">
+	_uacct = "UA-428560-2";
+	urchinTracker();
+	</script>
+
+
+<!-- --- POOLEXPERT ROGERS EMBEDD CODE ---->
+<script type="text/javascript"><!--
+var analyticsProtocol = (("https:" == document.location.protocol) ? "https://" : "http://");
+var analyticsHostServer = "analytics.rogersmedia.com";
+var s_account = "rogmedpoolexpertcom";    // Report Suite ID
+document.write(unescape("%3Cscript src='" + analyticsProtocol + analyticsHostServer + "/js/analytics.js' type='text/javascript'%3E%3C/script%3E"));
+//--></script><script src="https://analytics.rogersmedia.com/js/analytics.js" type="text/javascript"></script>
+<script type="text/javascript"><!--
+/* [INSERT CUSTOMIZATIONS HERE] */
+var s_code=s.t(); if(s_code)document.write(s_code)//-->
 </script>
 
 
