--- a/c/co/con/congland.com.html
+++ b/c/co/con/congland.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the congland.com privacy policy that was archived on 2008-09-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080914065313id_/http%3A//congland.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the congland.com privacy policy that was archived on 2009-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090615034033id_/http%3A//congland.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>CONGLAND - Privacy Policy</title>
@@ -48,6 +48,13 @@
             advertisers). However, we have no access to or control over these 
             cookies, once we have given permission for them to set cookies for 
             advertising.</font></p>
+          <p> <font size="2" face="Verdana, Arial, Helvetica, sans-serif">* Google, as 
+            a third party vendor, uses cookies to serve ads on your site.<br>
+            * Google's use of the DART cookie enables it to serve ads to your 
+            users based on their visit to your sites and other sites on the Internet.<br>
+            * Users may opt out of the use of the DART cookie by visiting the 
+            <a href="http://www.google.com/privacy_ads.html">Google ad and content 
+            network privacy policy. </a></font></p>
           <p><font size="2" face="Verdana, Arial, Helvetica, sans-serif"><strong>Links</strong><br>
             This Web site contains links to other sites. Please be aware that 
             we are not responsible for the privacy practices of such other sites. 
