--- a/o/ol/old/olddicksyoungchix.com.html
+++ b/o/ol/old/olddicksyoungchix.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the olddicksyoungchix.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216041242id_/http%3A//www.olddicksyoungchix.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the olddicksyoungchix.com privacy policy that was archived on 2009-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090615041002id_/http%3A//olddicksyoungchix.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
