--- a/o/og/ogd/ogdenscore.com.html
+++ b/o/og/ogd/ogdenscore.com.html
@@ -1,11 +1,11 @@
-<!--The following is the downloaded HTML source of the ogdenscore.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216022318id_/http%3A//www.score.org/privacy_policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ogdenscore.com privacy policy that was archived on 2009-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090615041354id_/http%3A//www.score.org/privacy_policy.html) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-16">
 <title>Privacy Policy | SCORE</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta name="keywords" content="SCORE, business plan,how to write a business plan,small business,entrepreneur,SBA,small business administration,business mentor,small business information,business advice,business help,starting a business,business expansion,small business training, women, coaching, mentoring, counseling, SCORE, Privacy Policy, privacy, SCORE Counselors to Americas Small Business">
+<meta name="keywords" content="SCORE, business plan,how to write a business plan,small business,entrepreneur,SBA,small business administration,business mentor,small business information,business advice,business help,starting a business,business expansion,small business training, women, coaching, mentoring, counseling, , SCORE, Privacy Policy, privacy, SCORE Counselors to Americas Small Business">
 <base href="http://www.score.org/">
 <link rel="stylesheet" href="main_style.css" type="text/css"><script src="js/lib.js"></script><script src="js/popup.js"></script><script src="js/main.js"></script><script src="js/jquery.js"></script></head>
 <body bgcolor="#FFFFFF" text="#000000" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" onload="onLoad()"><a name="Top"></a><table width="100%" height="100%" border="0" cellspacing="0" cellpadding="0">
@@ -49,7 +49,7 @@
 <tr>
 <td></td>
 <td><img src="images_global/leftnav_action_arrow.gif" width="10" height="9" alt=""></td>
-<td class="action_nav"><a href="online_courses.html">Learn Online</a></td>
+<td class="action_nav"><a href="online_workshops.html">Online Workshops</a></td>
 <td></td>
 </tr>
 <tr>
@@ -324,22 +324,22 @@
 <tbody><tr><td height="3" bgcolor="#000000"><img src="images_global/shim.gif" width="1" height="1" alt=""></td></tr>
 <tr><td bgcolor="#FFFFFF" valign="top"><noindex><table width="100%" border="0" cellspacing="0" cellpadding="5">
 <tbody><tr>
-<td class="footer_links_blue" align="left" valign="top"><nobr><a class="footer_links_blue" href="ask_score.html">Ask SCORE</a></nobr> · <nobr><a class="footer_links_blue" href="explore_score.html">About SCORE</a></nobr> · <nobr><a class="footer_links_blue" href="sitemap.html">Site Map</a></nobr> · <nobr><a class="footer_links_blue" href="internet_enewsletters_subscribe.html">Get eNewsletters</a></nobr> · <nobr><a class="footer_links_blue" href="findscore/">Find SCORE Locations Near You</a></nobr> · <nobr><a class="footer_links_blue" href="business_toolbox.html">Business Tools</a></nobr> · <nobr><a class="footer_links_blue" href="learning_center.html">How-To</a></nobr> · <nobr><a class="footer_links_blue" href="success_stories.html">Success Stories</a></nobr> · <nobr><a class="footer_links_blue" href="web_awards.html">Web Site Awards</a></nobr> · <nobr><a class="footer_links_blue" href="assistive_technology.html">ADA Feedback</a></nobr> · <nobr><a class="footer_links_blue" href="disaster_preparedness.html">Disaster Prep and Relief</a></nobr> · <nobr>© 2008 SCORE Association. 1-800/634-0245</nobr></td>
+<td class="footer_links_blue" align="left" valign="top"><nobr><a class="footer_links_blue" href="ask_score.html">Ask SCORE</a></nobr> · <nobr><a class="footer_links_blue" href="explore_score.html">About SCORE</a></nobr> · <nobr><a class="footer_links_blue" href="sitemap.html">Site Map</a></nobr> · <nobr><a class="footer_links_blue" href="internet_enewsletters_subscribe.html">Get eNewsletters</a></nobr> · <nobr><a class="footer_links_blue" href="findscore/">Find SCORE Locations Near You</a></nobr> · <nobr><a class="footer_links_blue" href="business_toolbox.html">Business Tools</a></nobr> · <nobr><a class="footer_links_blue" href="learning_center.html">How-To</a></nobr> · <nobr><a class="footer_links_blue" href="success_stories.html">Success Stories</a></nobr> · <nobr><a class="footer_links_blue" href="web_awards.html">Web Site Awards</a></nobr> · <nobr><a class="footer_links_blue" href="assistive_technology.html">ADA Feedback</a></nobr> · <nobr><a class="footer_links_blue" href="disaster_preparedness.html">Disaster Prep and Relief</a></nobr> · <nobr>© 2009 SCORE Association. 1-800/634-0245</nobr></td>
 </tr>
 </tbody></table></noindex></td></tr>
 </tbody></table>
 </td>
 </tr>
 </tbody></table><script type="text/javascript">
-
 var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
 document.write(unescape("%3Cscript src='http://www.google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-
-</script><script src="http://www.google-analytics.com/ga.js" type="text/javascript"></script><script type="text/javascript">
+</script><script src="http://www.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
 try {
 var pageTracker = _gat._getTracker("UA-3238127-2");
 pageTracker._trackPageview();
-} catch(err) {}</script>
+} catch(err) {}
+</script>
 
 	
 
