--- a/p/pr/pre/premiumbeat.com.html
+++ b/p/pr/pre/premiumbeat.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the premiumbeat.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216032138id_/http%3A//www.premiumbeat.com/privacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the premiumbeat.com privacy policy that was archived on 2009-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090615041505id_/http%3A//www.premiumbeat.com/privacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <meta name="rating" content="General">
@@ -8,6 +8,7 @@
 <meta content="supervisor" name="Author">
 <meta name="keywords" content="royalty free music, stock music, music for website, Flash loops, background music, royalty free music downloads ">
 <meta name="description" content="Royalty Free Music, professional tracks and Flash loops for website, background music, film, radio and television. Preview and download instantly.">
+<link rel="image_src" href="http://www.premiumbeat.com/images/logopb.jpg">
 <title>Privacy Policy</title>
 <link href="/styles.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="/swfobject.js"></script>
@@ -31,18 +32,16 @@ MM_reloadPage(true);
 function getLink(url){
 	document.location = url;
 }
-function getPreview(path,type,id,prodId){
-	win = window.open('/preview/preview.php?path='+path+'&type='+type+'&id='+id+'&prodId='+prodId,'previewWin','left=20,top=20,width=300,height=265,toolbar=0,resizable=0');
-}
+
 function getPreview(path,type,id,prodId){
 	platform = window.navigator.platform.toLowerCase();
 	browser = window.navigator.appName.toLowerCase();
 	var w = 300;
-	var h = 265;
+	var h = 280;
 	if (platform.indexOf('mac') != -1){
-		w = 330;
+		w = 300;
 		if(browser=='microsoft internet explorer'){
-			h = 245;
+			h = 280;
 		}
 	}else{
 		
@@ -65,11 +64,13 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
 </script>
 </head>
 <body>
-<div id="logoLink"><a href="/"><img src="/images/trans.gif" width="250" height="70" border="0" usemap="#Map"></a><a href="/">
+<div id="logoLink">
+<a href="/"><img src="/images/trans.gif" width="250" height="70" border="0" usemap="#Map"></a><a href="/">
   <map name="Map">
     <area shape="rect" coords="0,0,32000,2380" href="/" alt="Back to premiumbeat.com">
   </map>
-</a></div>
+</a>
+</div>
 <table width="744" border="0" align="center" cellpadding="0" cellspacing="0">
   <tbody><tr>
     <td><table width="744" height="163" border="0" cellpadding="0" cellspacing="0">
@@ -148,7 +149,11 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
     <td align="left" valign="bottom"><span class="smallTitles">&nbsp;</span>
       <table width="100%" border="0" cellpadding="0" cellspacing="0">
         <tbody><tr>
-          <td valign="middle"><div style="padding-left:12px" align="left"><a href="https://www.paypal.com/verified/pal=gillesarbour@premiumbeat.com " target="_blank"><img src="/images/paypal_verified.gif" alt="paypal approved" width="48" height="48" border="0"></a>&nbsp;<img src="/images/secureShopping.gif" width="101" height="49" border="0"></div></td>
+          <td valign="middle"><div style="padding-left:12px" align="left"><a href="https://www.paypal.com/verified/pal=gillesarbour@premiumbeat.com " target="_blank"><img src="/images/paypal_verified.gif" alt="paypal approved" width="48" height="48" border="0"></a>&nbsp;
+              <!--Start Beanstream Secure Code -->
+              <!-- End Beanstream Secure Code -->
+              <span style="width: 110px; text-align: center;"><a style="text-decoration: none;" href="https://www.beanstream.com/scripts/valid_merchant.asp?merchantId=130800000" target="_new"><img src="https://www.beanstream.com/public/assets/images/media/beanstream_secure/beanstream_secure_light.gif" border="0"></a></span><br>
+          </div></td>
           <td width="520" height="20" align="left" class="menuItems"><table class="menuItems" height="0" border="0" cellpadding="0" cellspacing="0">
             <tbody><tr>
               <td class="menuItems"><a href="/index.php">home</a></td>
@@ -198,15 +203,12 @@ function MM_jumpMenu(targ,selObj,restore){ //v3.0
       <tbody><tr>
         <td class="small" valign="top"><div style="padding-left:12px" align="left"><img src="/images/trans.gif" width="2" height="2"><img src="/images/credit_logos.gif" width="146" height="21" align="top">&nbsp;<br>
         </div></td>
-        <td width="520" height="37" align="left" valign="top" class="menuItems"><img src="/images/designByScalpel.gif" alt="Design by Scalpel" width="292" height="25" border="0" usemap="#scalpel"><span class="menuItems"><img src="/images/trans.gif" width="20" height="8"></span></td>
+        <td width="530" height="37" align="left" valign="top" class="menuItems"><img src="/images/logopb.jpg" alt="logo" width="34" height="34" align="absmiddle"><span class="small">PREMIUMBEAT.COM - ALL RIGHTS RESERVED  2009</span></td>
       </tr>
     </tbody></table>
     <img src="/images/trans.gif" width="17" height="17"></td>
   </tr>
 </tbody></table>
-<map name="scalpel" id="scalpel">
-  <area shape="rect" coords="1,3,107,27" href="http://www.scalpeldesign.com" target="_blank" alt="Design by Scalpel">
-</map>
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
